tests/reject/wildcard_expr.alg
sort S;
var x : S;

axiom _ = x;
